--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,15 @@
 .user_header {
   padding-top: 1%;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
 }
 
 .Filter {
   float: right;
+  margin-right: 5%;
+}
+
+.product_item_container{
+  padding-left: 20%;
 }
 
 .App {
