--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,18 @@
   padding-bottom: 1%;
 }
 
+/* image {
+  border-radius: 0 !important;
+}
+
+.ui.card {
+  border-radius: 0 !important;
+} */
+
+.ui.segment {
+  border-radius: 0 !important;
+} */
+
 .Filter {
   float: right;
   margin-right: 5%;
