--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,15 @@ body {
   background-color: rgb(242, 244, 247);
 }
 
+.profile-landing {
+  height: 80%;
+  padding-left: 20%;
+}
+
+.nyfw {
+  /* height: 100%; */
+}
+
 .spacer {
   padding-top: 5%;
 }
