--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,7 +28,7 @@ body {
 }
 
 .landing-img{
-  background-image: url("1-13.jpg");
+  background-image: url("Images/1-13.jpg");
   height: 85%;
   width: 100%;
   padding-top: 10%;
